# Columnar-DB-Engine

./: .gitignore  README.md  sort_includes.py
.claude/: settings.json
.github/workflows/: main.yml
benchs/: clickhouse-parquet-res.csv  clickhouse-parquet-tmp.csv  duckdb-parquet-logs.txt  duckdb-parquet-res.csv  res.md  sc.py  state_of_art.csv
benchs/playground/: create_hits.sql  run_clickhouse.sh
playground/io_tests/: dark  dark.cpp
script/: build.sh  convert.sh  logs.txt  main.cpp  run_query.sh  setup.sh
src/: CMakeLists.txt
src/benchmark_tests/: CMakeLists.txt  debug.cpp  done.txt  tests.cpp
src/benchmark_tests/clickbench/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/columns/: CMakeLists.txt
src/columns/operators/: arithmetic_operators.h  dates.h  distinct.h  filter.h  io_operators.h  min_max.h  operators.h  order.h  vector_like.h
src/columns/tests/: CMakeLists.txt  filter_test.cpp  if_test.cpp  order_test.cpp  sum_test.cpp  tests.h  vertical_sum_test.cpp
src/columns/types/: double_columns.cpp  int_columns.cpp  str_columns.cpp  time_columns.cpp  types.cpp  types.h
src/csvio/: CMakeLists.txt  csv_reader.cpp  csv_reader.h  csv_writer.cpp  csv_writer.h  test.cpp
src/debug/: CMakeLists.txt  input  main.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h  errors.h  nodes_factory.cpp  nodes_factory.h  table_input.cpp  test.cpp  workers_test.cpp
src/engine/debug/: CMakeLists.txt  data.csv  josh.jf  main.cpp  scheme.csv
src/executor/: CMakeLists.txt  executor.cpp  executor.h
src/executor/debug/: CMakeLists.txt  RESULT_DATA.csv  RESULT_SCHEME.csv  data.csv  gen.py  josh.jf  main.cpp  out.txt  scheme.csv  ssch.csv  tmp1.jf  tmp2.jf
src/executor/sql_parser/: CMakeLists.txt  create_token.cpp  errors.h  from_token.cpp  group_token.cpp  limit_token.cpp  misc.cpp  name_token.cpp  order_token.cpp  select_token.cpp  tokenizer.cpp  tokenizer.h  where_token.cpp
src/executor/tests/: CMakeLists.txt  bigtest.cpp  tests.cpp  tests.h
src/ios_factory/: CMakeLists.txt  errors.h  ios_factory.cpp  ios_factory.h
src/memory/: arena.h
src/sql_parser/: tokenizer.cpp  tokenizer.h
src/table_node/: CMakeLists.txt  errors.h  nodes_factory.cpp  nodes_factory.h  operators.h  types.cpp  types.h
src/utils/: CMakeLists.txt
src/utils/cint/: CMakeLists.txt  double.cpp  double.h  int.cpp  int.h
src/utils/csvio/: CMakeLists.txt  csv_reader.cpp  csv_reader.h  csv_writer.cpp  csv_writer.h  errors.h  test.cpp
src/utils/defer/: CMakeLists.txt  defer.h
src/utils/errors/: CMakeLists.txt  errors.cpp  errors.h  errors_templates.h
src/utils/faster_hashmap/: CMakeLists.txt  hashmap.h  hashset.h  time_test.cpp
src/utils/faster_vectors/: CMakeLists.txt  gstring.h  string_heap.h  vector_1d.cpp  vector_1d.h  vector_string_2d.h
src/utils/like/: CMakeLists.txt  benchmark.cpp  combined.h  kmp_stupid.h  sse_stupid.h
src/utils/logger/: CMakeLists.txt  logger.cpp  logger.h
src/utils/perf_stats/: CMakeLists.txt  perf_stats.cpp  perf_stats.h
src/workers/: CMakeLists.txt  base.cpp  base.h  errors.h
src/workers/agregations_engine/: CMakeLists.txt  engine.cpp  engine.h  operators.cpp  operators.h
src/workers/ao_engine/: CMakeLists.txt  agregations.cpp  agregations.h  engine.cpp  engine.h  operators.cpp  operators.h
src/workers/filters/: CMakeLists.txt  filter.cpp  filter.h  test.cpp
src/workers/global_agregations/: CMakeLists.txt  agregator.cpp  agregator.h  operators.cpp  operators.h
src/workers/global_agregations/tests/: CMakeLists.txt  agregations_test.h  sum_test.cpp  test.cpp
src/workers/groupby/: CMakeLists.txt  groupby.cpp  groupby.h  narrow_io.cpp  narrow_io.h
src/workers/groupby/tests/: CMakeLists.txt  test.cpp
src/workers/io/: CMakeLists.txt  io.cpp  io.h
src/workers/orderby/: CMakeLists.txt  orderby.cpp  orderby.h
src/workers/orderby/tests/: CMakeLists.txt  test.cpp
src/workers/selector/: CMakeLists.txt  errors.h  selector.cpp  selector.h
